fix: scrollbar

--- a/styles/components/_card-prod.scss
+++ b/styles/components/_card-prod.scss
@@ -40,22 +40,22 @@
   }
 
   &__foto-main {
+    padding-bottom: 5rem;
     height: 550px;
   }
 
   &__foto {
     width: 100%;
   }
-
+  //стили скроллбара для webkit браузеров 
   &__block-foto-mini::-webkit-scrollbar { 
-    height: 4px;
-    //display: none;
+    height: 7px;
   } 
   &__block-foto-mini::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    background: rgba(150,150,150,0.3);
   } 
   &__block-foto-mini::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px rgb(7, 196, 127);
+    background:rgb(7, 196, 127);
   }
 
   &__block-foto-mini {
@@ -63,12 +63,12 @@
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
-    // height: 100%;
-    scrollbar-color: rgba(79, 79, 79, 0.4) rgba(193, 193, 193, 0.4);
-    scrollbar-width: thin;
     gap: 20px;
     padding-bottom: 21px;
     border-bottom: 1px solid rgba(193, 193, 193, 0.4);
+    //стили скроллбара для mozilla браузера
+    scrollbar-color: rgb(7, 196, 127) rgba(150,150,150,0.3);
+    scrollbar-width: thin;
 
     & input[type="radio"] {
       display: none;
